added security config

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -38,30 +38,30 @@
         <div class="col-md-6">
             <div class="card">
                 <h3 class="card-title text-center">Регистрация</h3>
-                <form th:action="@{/register}" method="post">
+                <form th:action="@{/register}" th:object="${registrationForm}" method="post">
                     <div class="form-group">
                         <label for="username">Имя пользователя</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" th:field="*{username}" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Пароль</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" th:field="*{password}" required>
                     </div>
                     <div class="form-group">
                         <label for="firstName">Имя</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" required>
+                        <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required>
                     </div>
                     <div class="form-group">
                         <label for="secondName">Фамилия</label>
-                        <input type="text" class="form-control" id="secondName" name ="secondName" required>
+                        <input type="text" class="form-control" id="secondName" th:field="*{secondName}" required>
                     </div>
                     <div class="form-group">
                         <label for="patronymic">Отчество</label>
-                        <input type="text" class="form-control" id="patronymic" name="patronymic">
+                        <input type="text" class="form-control" id="patronymic" th:field="*{patronymic}">
                     </div>
                     <div class="form-group">
                         <label for="email">Электронная почта</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                        <input type="email" class="form-control" id="email" th:field="*{email}" required>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Зарегистрироваться</button>
                 </form>
