--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,14 +47,14 @@
             <h4>Авторизация</h4>
         </div>
         <div class="card-body">
-            <form>
+            <form action="@{/login}" method="post">
                 <div class="form-group">
-                    <label for="email">Email адрес</label>
-                    <input type="email" class="form-control" id="email" placeholder="Введите email">
+                    <label for="username">Имя пользователя</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Введите имя пользователя" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Пароль</label>
-                    <input type="password" class="form-control" id="password" placeholder="Введите пароль">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Введите пароль" required>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Войти</button>
             </form>
