--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,75 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список аниме - Авторизация</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
-        }
-        .container {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: white;
-        }
-        .card {
-            width: 100%;
-            max-width: 400px;
-            margin-top: 20px;
-        }
-        .card-header {
-            background-color: #2575fc;
-            border-bottom: none;
-        }
-        .btn-primary {
-            background-color: #2575fc;
-            border: none;
-        }
-        .btn-primary:hover {
-            background-color: #1a5dbc;
-        }
-        .form-group label {
-            color: black;
-        }
-        .error-message {
-            color: red;
-            margin-bottom: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>sign in</title>
+      <<link rel="stylesheet" th:href="@{style.css}" type="text/css">>
+
 </head>
+
+
 <body>
-<div class="container">
-    <h1>Добро пожаловать в Список аниме</h1>
-    <p>Пожалуйста, войдите в свою учетную запись</p>
-    <div class="card">
-        <div class="card-header text-center">
-            <h4>Авторизация</h4>
-        </div>
-        <div class="card-body">
-            <form action="/login" method="post">
-                <div class="form-group">
-                    <label for="username">Имя пользователя</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Введите имя пользователя" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Введите пароль" required>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Войти</button>
-            </form>
-        </div>
-    </div>
+  <h1>Sign In</h1>
+<div id="wrapper">
+	<form id="signin" action="/login" method="post">
+		<input type="text" id="username" name="username" placeholder="username" />
+		<input type="password" id="password" name="password" placeholder="password" />
+		<button type="submit">&#xf0da;</button>
+	</form>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
